--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-	<title>Roses</title>
+	<title>Ro$e$</title>
 	</head>
 	<body>
 	<iframe src="http://nrpl.org" height="500" width="500"></iframe>
