--- a/Lab 3.html
+++ b/Lab 3.html
@@ -1,6 +1,6 @@
 <html>
 <title>Selfie Image Lab 3</title>
 <body>
-<img src="http://www.wikipedia.org" width="100" height="150"
+<img src="http://www.wikipedia.org" width="100" height="150">
 </body>
 </html>
