--- a/GirlsWithConfidence.html
+++ b/GirlsWithConfidence.html
@@ -18,7 +18,7 @@ p {
 <p> Don't be afraid to express yourself </p>
 <p> ALL different types of girls and women should be excepted</p>
 <img src="http://www.centerplacebrandon.org/userfiles/images/Girls%20with%20Confidence%20Logo.jpg">
-<img class="img-circle" alt="girls with confidence" height="500" width="500"
+<img class="img-circle" alt="Girls With Confidence" height="500" width="500"
 	src="http://www.centerplacebrandon.org/userfiles/images/Girls%20with%20Confidence%20Logo.jpg">
 </body>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3Gka1ML-CWZzIthFsK76WTxbjF-S71AbDVYfHy-xj_Vv-R2I">
