--- a/Top10BaseballTeams.html
+++ b/Top10BaseballTeams.html
@@ -15,6 +15,6 @@ p {
 </head>
 <body>
 <h1>Top 10 Baseball Teams</h1>
-<img width="350" height="450" src="https://s-media-cache-ak0.pinimg.com/236x/a8/4a/02/a84a02425023729cebaf609fb240018b.jpg">
+<img width="350" height="450" src="">
 </body>
 </html>
