--- a/CoolBaseballBackgrounds.html
+++ b/CoolBaseballBackgrounds.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <img width="500" height="450" src="https://i.ytimg.com/vi/KkaDLRk03FY/hqdefault.jpg">
-<img width="600 height="600" src="https://blog-blogmediainc.netdna-ssl.com/upload/SportsBlogcom/192348/0317260001428411255_filepicker.jpg">
+<img width="600 height="600" src="https://i.ytimg.com/vi/-7TQYrhWSmM/maxresdefault.jpg">
 </body>
 </html>
