--- a/DisneyWorld.html
+++ b/DisneyWorld.html
@@ -23,7 +23,7 @@ Click here to see amazing sites at Animal Kingdom!</a>
 <h3>Magic Kingdom</h3>
 <a href="https://i.ytimg.com/vi/zmZ2LZ-P830/maxresdefault.jpg"
 Click here to see an awesome picture of a place in Magic Kingdom!</a>
-<a href="http://24.media.tumblr.com/tumblr_m7u00dv4BD1qieaa0o1_500.png"
+<a href="http://tombricker.smugmug.com/Disney/Magic-Kingdom/i-7WVfndW/0/M/DSC_9719-M.jpg"
 Click here to take a quick glimpse of the Magic Kingdom in Disney World!</a>
     
 <h4>Amazing Pictures</h4>
