--- a/DisneyWorld.html
+++ b/DisneyWorld.html
@@ -15,6 +15,7 @@ p {
 </head>
 <body>
 <h1>Disney World</h1>
+<img width="500" height="500" src="http://cdn.c.photoshelter.com/img-get/I0000q74mOIUNYFM/s/850/850/20110427-florida-0027.jpg">
 <h2>Animal Kingdom</h2>
 <a href="http://cdn.wdwmagic.com/imgstore/ElementGalleryItems/attractions/Fullsize/Rivers-of-Light_Full_26018.jpg;width=630;height=422;mode=crop;quality=60;encoder=freeimage;progressive=true">
 Click here to see an attractive picture of Animal Kingdom!</a>
