--- a/DisneyWorld.html
+++ b/DisneyWorld.html
@@ -11,6 +11,10 @@ background-attachment: fixed;
 p {
     color:black;
 }
+<h1 style="color:white">Disney World</h1>
+<h2 style="color:white">Animal Kingdom</h2>
+<h3 style="color:white">Magic Kingdom</h3>
+<h4 style="color:white">Amazing Pictures</h4>
 </style>
 </head>
 <body>
