--- a/Top10BaseballTeams.html
+++ b/Top10BaseballTeams.html
@@ -14,6 +14,6 @@ p {
 </style>
 </head>
 <body>
-<h1 style="color:purple">Top 10 Baseball Teams</h1>
+<h1 style="color:baby blue">Top 10 Baseball Teams</h1>
 </body>
 </html>
