--- a/Top10BaseballTeams.html
+++ b/Top10BaseballTeams.html
@@ -12,6 +12,7 @@ p {
     color:white;
 }
 </style>
+<link rel="icon" type="jpg" href="http://cdn.abclocal.go.com/content/wabc/images/cms/138032_1280x720.jpg">
 </head>
 <body>
 <h1 style="color:white">Top 10 Baseball Teams</h1>
