--- a/Top10BaseballTeams.html
+++ b/Top10BaseballTeams.html
@@ -13,6 +13,13 @@ p {
 }
 </style>
 <link rel="icon" type="jpg" href="http://cdn.abclocal.go.com/content/wabc/images/cms/138032_1280x720.jpg">
+<ul class="nav nav-tabs">
+    <li class="active"><a
+href="home.html">Home</a></li>
+    <li><a href="aboutme.html">Menu 1</a></li>
+    <li><a href="contactus.html">Menu 2</a></li>
+    <li><a href="more.html">Menu 3</a></li>
+</ul>
 </head>
 <body>
 <h1 style="color:white">Top 10 Baseball Teams</h1>
