--- a/Top10BaseballTeams.html
+++ b/Top10BaseballTeams.html
@@ -17,6 +17,8 @@ p {
     <li class="active"><a
 href="home.html">Home</a></li>
     <li><a href="aboutme.html">Menu 1</a></li>
+    <img src="smiley.gif"
+    alt="Smiley face" width="42" height="42">
     <li><a href="contactus.html">Menu 2</a></li>
     <li><a href="more.html">Menu 3</a></li>
 </ul>
