--- a/Top10BaseballTeams.html
+++ b/Top10BaseballTeams.html
@@ -16,9 +16,9 @@ p {
 <ul class="nav nav-tabs">
     <li class="active"><a
 href="home.html">Home</a></li>
-    <li><a href="aboutme.html">Menu 1</a></li>
-    <li><a href="contactus.html">Menu 2</a></li>
-    <li><a href="more.html">Menu 3</a></li>
+    <li><a href="menu1.html">Menu 1</a></li>
+    <li><a href="menu2.html">Menu 2</a></li>
+    <li><a href="menu3.html">Menu 3</a></li>
 </ul>
 </head>
 <body>
