--- a/Top10BaseballTeams.html
+++ b/Top10BaseballTeams.html
@@ -20,6 +20,7 @@ href="home.html">Home</a></li>
     <li><a href="menu2.html">Menu 2</a></li>
     <li><a href="menu3.html">Menu 3</a></li>
 </ul>
+<link rel="icon" type="jpg" href="http://cdn.abclocal.go.com/content/wabc/images/cms/138032_1280x720.jpg">
 </head>
 <body>
 <h1 style="color:white">Top 10 Baseball Teams</h1>
