--- a/Top10BaseballTeams.html
+++ b/Top10BaseballTeams.html
@@ -16,9 +16,9 @@ p {
 <ul class="nav nav-tabs">
     <li class="active"><a
 href="home.html">Home</a></li>
-    <li><a href="menu1.html">Menu 1</a></li>
-    <li><a href="menu2.html">Menu 2</a></li>
-    <li><a href="menu3.html">Menu 3</a></li>
+    <li><a href="AwesomeBaseballBackgrounds.html">Menu 1</a></li>
+    <li><a href="home.html">Menu 2</a></li>
+    <li><a href="menu1.html">Menu 3</a></li>
 </ul>
 <link rel="icon" type="jpg" href="http://cdn.abclocal.go.com/content/wabc/images/cms/138032_1280x720.jpg">
 </head>
