--- a/Top10BaseballTeams.html
+++ b/Top10BaseballTeams.html
@@ -15,10 +15,10 @@ p {
 <link rel="icon" type="jpg" href="http://cdn.abclocal.go.com/content/wabc/images/cms/138032_1280x720.jpg">
 <ul class="nav nav-tabs">
     <li class="active"><a
-href="home.html">Home</a></li>
+href=AwesomeBaseballBackgrounds.html>Home</a></li>
     <li><a href="AwesomeBaseballBackgrounds.html">Menu 1</a></li>
-    <li><a href="home.html">Menu 2</a></li>
-    <li><a href="menu1.html">Menu 3</a></li>
+    <li><a href="GirlsWithConfidence.html">Menu 2</a></li>
+    <li><a href="DisneyWorld.html">Menu 3</a></li>
 </ul>
 <link rel="icon" type="jpg" href="http://cdn.abclocal.go.com/content/wabc/images/cms/138032_1280x720.jpg">
 </head>
