--- a/LakeGeorge.html
+++ b/LakeGeorge.html
@@ -6,6 +6,12 @@
 <h1 style="color:white">Fun Places to go in Lake George,NY</h1>
 <h2>There are so many fun things to do in Lake George, but here are a few!</h2>
 <ul>
+	<li>Six Flags: The Great Escape</li>
+	<li>Water Slide World</li></li>
+	<li>The Sagamore</li>
+	<li></li>
+	<li></li>
+	</ul>
 
 
 
