--- a/LakeGeorge.html
+++ b/LakeGeorge.html
@@ -9,11 +9,8 @@
 	<li>Six Flags: The Great Escape</li>
 	<li>Water Slide World</li></li>
 	<li>The Sagamore</li>
-	<li></li>
-	<li></li>
-	</ul>
-
-
-
+	<li>Fort william Henry</li>
+	<li>Parasailing on the lake</li>
+	<li>Going on a steamboat</li>
 </body>
 </html>
