--- a/LakeGeorge.html
+++ b/LakeGeorge.html
@@ -1,7 +1,17 @@
 <html>
 <head>
 <title>Fun Places to go in Lake George,NY</title>
-http://41.media.tumblr.com/66a9aa0ae99886e20a5e456fd91f4d32/tumblr_nv8pimLqPd1uzt7olo1_500.jpg
+<style>
+body { 
+background:url("http://41.media.tumblr.com/66a9aa0ae99886e20a5e456fd91f4d32/tumblr_nv8pimLqPd1uzt7olo1_500.jpg");
+background-size: cover;
+background-position: center;
+background-attachment: fixed;
+}
+p {
+    color:black;
+}
+</style>
 </head> 
 <body>
 <h1 style="color:white">Fun Places to go in Lake George,NY</h1>
