--- a/LakeGeorge.html
+++ b/LakeGeorge.html
@@ -15,9 +15,9 @@ p {
 </head> 
 <body>
 <h1 style="color:white">Fun Places to go in Lake George,NY</h1>
-<h2>There are so many fun things to do in Lake George, but here are a few!</h2>
+<h2 style="color:white">There are so many fun things to do in Lake George, but here are a few!</h2>
 <ul>
-	<li>Six Flags: The Great Escape</li>
+	<li style="color:white">Six Flags: The Great Escape</li>
 	<li>Water Slide World</li></li>
 	<li>The Sagamore</li>
 	<li>Fort william Henry</li>
