--- a/LakeGeorge.html
+++ b/LakeGeorge.html
@@ -18,10 +18,10 @@ p {
 <h2 style="color:white">There are so many fun things to do in Lake George, but here are a few!</h2>
 <ul>
 	<li style="color:white">Six Flags: The Great Escape</li>
-	<li>Water Slide World</li></li>
-	<li>The Sagamore</li>
-	<li>Fort william Henry</li>
-	<li>Parasailing on the lake</li>
-	<li>Going on a steamboat</li>
+	<li style="color:white">Water Slide World</li>
+	<li style="color:white">The Sagamore</li>
+	<li style="color:white">Fort William Henry</li>
+	<li style="color:white">Parasailng on the lake</li>
+	<li style="color:white">Riding a steamboat</li>
 </body>
 </html>
