--- a/LakeGeorge.html
+++ b/LakeGeorge.html
@@ -18,6 +18,8 @@ p {
 <h2 style="color:white">There are so many fun things to do in Lake George, but here are a few!</h2>
 <ul>
 	<li style="color:white">Six Flags: The Great Escape</li>
+	<img src="http://t.rmncdn.com/blog/2013/07/Flickr-Six-Flags-Great-Escape-NY-1373567547.jpg"
+	
 	<li style="color:white">Water Slide World</li>
 	<li style="color:white">The Sagamore</li>
 	<li style="color:white">Fort William Henry</li>
