--- a/Top10BaseballTeams.html
+++ b/Top10BaseballTeams.html
@@ -16,7 +16,7 @@ p {
 <ul class="nav nav-tabs">
     <li class="active"><a
 href=AwesomeBaseballBackgrounds.html>Home</a></li>
-    <li><a href="AwesomeBaseballBackgrounds.html">Menu 1</a></li>
+    <li><a href="LakeGeorge.html">Menu 1</a></li>
     <li><a href="GirlsWithConfidence.html">Menu 2</a></li>
     <li><a href="DisneyWorld.html">Menu 3</a></li>
 </ul>
